[gd_scene load_steps=5 format=3 uid="uid://dp81rkrifkbmn"]

[ext_resource type="Script" path="res://Scenes/Levels/LevelSelect.gd" id="1_3mcah"]
[ext_resource type="FontFile" uid="uid://btve8ngv4mvnd" path="res://Art/Fonts/Crang.ttf" id="2_26q07"]
[ext_resource type="FontFile" uid="uid://ceyy4deiq2wlb" path="res://Art/Fonts/' Mono Bold.ttf" id="3_qb1js"]
[ext_resource type="AudioStream" uid="uid://dr2t8yxsbkngm" path="res://audio/BGM.mp3" id="4_0ovpo"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3mcah")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 80.0
offset_top = 88.0
offset_right = 573.0
offset_bottom = 160.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_26q07")
theme_override_font_sizes/font_size = 58
text = "LEVEL SELECT"

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_0ovpo")
volume_db = -5.0
pitch_scale = 0.75
autoplay = true

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 432.0
offset_right = 360.0
offset_bottom = 474.0
theme_override_fonts/font = ExtResource("3_qb1js")
theme_override_font_sizes/font_size = 28
text = "BACK"

[node name="Lvl0" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 296.0
offset_right = 146.0
offset_bottom = 338.0
scale = Vector2(1.76, 1.76)
theme_override_fonts/font = ExtResource("3_qb1js")
theme_override_font_sizes/font_size = 28
text = "0"
icon_alignment = 1

[node name="Lvl1" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 296.0
offset_right = 234.0
offset_bottom = 338.0
scale = Vector2(1.76, 1.76)
theme_override_fonts/font = ExtResource("3_qb1js")
theme_override_font_sizes/font_size = 28
text = "1"
icon_alignment = 1

[node name="Lvl2" type="Button" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 296.0
offset_right = 322.0
offset_bottom = 338.0
scale = Vector2(1.76, 1.76)
theme_override_fonts/font = ExtResource("3_qb1js")
theme_override_font_sizes/font_size = 28
text = "2"
icon_alignment = 1

[node name="Lvl3" type="Button" parent="."]
layout_mode = 0
offset_left = 368.0
offset_top = 296.0
offset_right = 410.0
offset_bottom = 338.0
scale = Vector2(1.76, 1.76)
theme_override_fonts/font = ExtResource("3_qb1js")
theme_override_font_sizes/font_size = 28
text = "3"
icon_alignment = 1

[node name="Lvl4" type="Button" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 296.0
offset_right = 498.0
offset_bottom = 338.0
scale = Vector2(1.76, 1.76)
theme_override_fonts/font = ExtResource("3_qb1js")
theme_override_font_sizes/font_size = 28
text = "4"
icon_alignment = 1

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Lvl0" to="." method="_on_lvl_0_pressed"]
[connection signal="pressed" from="Lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="Lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="Lvl3" to="." method="_on_lvl_3_pressed"]
[connection signal="pressed" from="Lvl4" to="." method="_on_lvl_4_pressed"]
